Fix horizontal overflow on mobile

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -27,6 +27,7 @@ html {
 body {
     font-family: $sansSerif;
     opacity: 0;
+    -webkit-transition: opacity 0.5s ease-in;
     transition: opacity 0.5s ease-in;
 }
 
@@ -58,6 +59,7 @@ body {
     width: 85%;
     margin-top: 4px;
     margin-bottom: 2em;
+    -webkit-transition: all ease 0.3s;
     transition: all ease 0.3s;
 }
 
@@ -66,8 +68,11 @@ body {
     left: 1vw;
     top: 50vh;
     font-size: 0.75rem;
-    transform: rotate(-90deg);
-    transform-origin: 0 0;
+    -webkit-transform: rotate(-90deg);
+            transform: rotate(-90deg);
+    -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+    -webkit-transition: all 0.15s;
     transition: all 0.15s;
     border-bottom: 0;
 }
@@ -93,8 +98,10 @@ a:hover {
 
 @media (max-width:1440px) {
     .card-container {
-        column-count: 3;
-        column-gap: 1.5em;
+        -webkit-column-count: 3;
+                column-count: 3;
+        -webkit-column-gap: 1.5em;
+                column-gap: 1.5em;
     }
     .filters__title {
         font-size: 1.25rem;
@@ -123,8 +130,10 @@ a:hover {
 
 @media (max-width:1000px) {
     .card-container {
-        column-count: 2;
-        column-gap: 1em;
+        -webkit-column-count: 2;
+                column-count: 2;
+        -webkit-column-gap: 1em;
+                column-gap: 1em;
     }
     .header__description,
     .header__title-wrapper {
@@ -138,10 +147,14 @@ a:hover {
         right: calc(7.5vw + 1em);
     }
     .back-to-top:hover {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
     }
     .card-container--rows .reddit-card-inner {
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .card-container--rows .reddit-card__post-title {
         padding: 0.5em 1em 0 1.5em;
@@ -161,8 +174,13 @@ a:hover {
     }
     .card-container--rows .card-footer {
         font-size: 0.75rem;
-        flex-direction: column;
-        align-items: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         width: 20%;
         padding: 0.25em;
     }
@@ -178,10 +196,13 @@ a:hover {
 
 @media (max-width:850px) {
     .card-container {
-        column-gap: 15px;
+        -webkit-column-gap: 15px;
+                column-gap: 15px;
     }
     .filters {
-        align-items: flex-start;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
     }
     .filters__top-bar {
         border-bottom: 1px solid #d1d4d5;
@@ -200,12 +221,21 @@ a:hover {
     .header__title {
         margin: 0;
         padding: 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        align-items: flex-end;
+        -webkit-box-align: end;
+            -ms-flex-align: end;
+                align-items: flex-end;
     }
     .header__title-wrapper {
-        flex-direction: column;
-        align-items: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
     }
     .header__description {
         margin: 0;
@@ -214,7 +244,10 @@ a:hover {
         width: 100%;
     }
     .card-container--rows .card-footer {
-        flex-direction: row;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
         width: 40%;
     }
     .card-container--rows .bar {
@@ -241,8 +274,13 @@ a:hover {
         margin-top: 1.5em;
     }
     .filters {
-        flex-direction: column;
-        align-items: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
     }
     .filters__list-item {
         margin: 1em 0.25em;
@@ -270,8 +308,10 @@ a:hover {
         height: 75px;
     }
     .info {
-        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+                transform: rotate(0deg);
         bottom: 1em;
+        left: 0;
         top: auto;
         position: relative;
     }
@@ -293,7 +333,10 @@ a:hover {
         margin: 0.25em;
     }
     .card-container--rows .card-footer {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         width: 20%;
     }
     .card-container--rows .bar {
@@ -325,7 +368,9 @@ a:hover {
     .is-sticky .nav-container {
         width: 95%;
         padding: 0;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .header,
     .is-sticky {
@@ -344,13 +389,17 @@ a:hover {
     .header__btn-wrapper,
     .is-sticky .header__btn-wrapper {
         padding-bottom: 0.05em;
-        order: 1;
+        -webkit-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1;
     }
     .search-wrapper {
         height: 55px;
         top: 65px;
         padding: 0 2.5vw;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
     .search--opened {
         width: 85%;
@@ -398,9 +447,12 @@ a:hover {
         font-size: 1.5rem;
     }
     .card-container {
-        column-count: 1;
-        column-gap: 15px;
-        column-gap: 0px;
+        -webkit-column-count: 1;
+                column-count: 1;
+        -webkit-column-gap: 15px;
+                column-gap: 15px;
+        -webkit-column-gap: 0px;
+                column-gap: 0px;
         top: 70px;
         margin-top: 5px;
         padding-top: 0.25em;
@@ -412,7 +464,9 @@ a:hover {
     }
     .reddit-card__post-title a {
         font-size: 1.25rem;
-        order: 1;
+        -webkit-box-ordinal-group: 2;
+            -ms-flex-order: 1;
+                order: 1;
     }
     .reddit-card__post-title:hover {
         margin-left: 0;
@@ -470,8 +524,13 @@ a:hover {
         padding: 1em 0.75em;
     }
     .card-container--rows .reddit-card-inner {
-        flex-direction: column;
-        align-items: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        -webkit-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
     }
     .card-container--rows .bar {
         display: block;
@@ -491,8 +550,13 @@ a:hover {
     }
     .card-container--rows .card-footer {
         width: 100%;
-        justify-content: flex-start;
-        flex-direction: row;
+        -webkit-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
         padding: 0;
     }
 }
